objects/Business_Objective__c/Business_Objective__c.object-meta.xml
<CustomObject>
    <description>Object is used to track the business objective at each customer account. TSEs/TAMs/DSAs will input objectives and will update as customers meet objectives. 

This object is owned by the Customer Experience team under Charles Ross.</description>
    <label>DEPRECATED - Business Objective</label>
    <nameField>
        <displayFormat>BO-{0000000}</displayFormat>
        <label>Business Objective ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Objectives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>