objects/Business_Objective__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>SS-11088: Deprecated.
Account that Use Case belongs to</description>
    <label>DEPRECATED - Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Objectives</relationshipLabel>
    <relationshipName>Use_Cases</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>