objects/Business_Objective__c/fields/Agency_Department__c.field-meta.xml
<CustomField>
    <fullName>Agency_Department__c</fullName>
    <description>SS-11088: Deprecated.
The Account&apos;s Agency or Department who requested this Business Objective</description>
    <inlineHelpText>Input the name of the Account&apos;s Agency or Department who requested this Business Objective. This may be common for Public Sector customers or highly distributed organizations where we have to &quot;sell into&quot; other agencies or departments.</inlineHelpText>
    <label>DEPRECATED - Agency/Department</label>
    <length>100</length>
    <type>Text</type>
</CustomField>