objects/Business_Objective__c/fields/Barrier_to_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Barrier_to_Achievement__c</fullName>
    <description>SS-11088: Deprecated.
Text field used to describe any barriers that may be keeping the customer from achieving this Business Objective (Product Features/Bugs, Resourcing, Champion Left, Lack of Adoptions, etc)</description>
    <inlineHelpText>Describe any barriers that may be keeping the customer from achieving this Business Objective (Product Features/Bugs, Resourcing, Champion Left, Lack of Adoptions, etc)</inlineHelpText>
    <label>DEPRECATED - Barrier to Achievement</label>
    <type>TextArea</type>
</CustomField>