objects/Business_Objective__c/fields/Business_Objective__c.field-meta.xml
<CustomField>
    <fullName>Business_Objective__c</fullName>
    <description>SS-11088: Deprecated.
SS-6861</description>
    <inlineHelpText>Select the broad goal or objective that your customer is trying to achieve with Tanium. This should map to one of their corporate initiatives</inlineHelpText>
    <label>DEPRECATED - Business Objective</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decrease Cost</fullName>
            </value>
            <value>
                <fullName>Decrease Risk</fullName>
            </value>
            <value>
                <fullName>Enable Business Growth</fullName>
            </value>
            <value>
                <fullName>Enable Data-driven Decision Making</fullName>
            </value>
            <value>
                <fullName>Enable Digital Innovation</fullName>
            </value>
            <value>
                <fullName>Improve Efficiency</fullName>
            </value>
            <value>
                <fullName>Improve Employee Experience and Productivity</fullName>
            </value>
            <value>
                <fullName>Improve Security</fullName>
            </value>
            <value>
                <fullName>Maximize Value of IT Investments</fullName>
            </value>
            <value>
                <fullName>Meet Compliance Requirements</fullName>
            </value>
            <value>
                <fullName>Other (Details Below)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>