objects/Business_Objective__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>SS-11088: Deprecated.</description>
    <label>DEPRECATED - Comments</label>
    <type>TextArea</type>
</CustomField>