objects/Business_Objective__c/fields/Customer_Business_Objective__c.field-meta.xml
<CustomField>
    <fullName>Customer_Business_Objective__c</fullName>
    <description>SS-11088: Deprecated.</description>
    <inlineHelpText>Describe the company business objective in your customer’s words.</inlineHelpText>
    <label>DEPRECATED - Business Objective Details</label>
    <type>TextArea</type>
</CustomField>