objects/Business_Objective__c/fields/Customer_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Customer_Outcome__c</fullName>
    <description>SS-11088: Deprecated.</description>
    <inlineHelpText>Select the measurable value that Tanium will drive to help the customer achieve their desired Business Objectives and solve a pain point. NOTE: Hover over selection to see full text</inlineHelpText>
    <label>DEPRECATED - Customer Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Objective__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accelerate threat response, investigation, and remediation at scale</fullName>
            </value>
            <value>
                <fullName>Accurate and real-time CVE management reports</fullName>
            </value>
            <value>
                <fullName>Accurate real-time Software Inventory Usage (SIU)</fullName>
            </value>
            <value>
                <fullName>Achieve Patch efficacy in the 90th+ percentile to meet SLA or other compliance requirements</fullName>
            </value>
            <value>
                <fullName>All PII and sensitive data is found and monitored</fullName>
            </value>
            <value>
                <fullName>Analyze both direct control and indirect control when evaluating the potential movement of an endpoint, user or group</fullName>
            </value>
            <value>
                <fullName>Answer any question about an endpoints current or historical state on demand in real-time</fullName>
            </value>
            <value>
                <fullName>Apply and enforce a unified policy configuration across all endpoints</fullName>
            </value>
            <value>
                <fullName>Assign impact ratings to users/groups/endpoints to easily prioritize the endpoints and user accounts pose cyber risk</fullName>
            </value>
            <value>
                <fullName>Automate endpoint management tasks such as patching and software deployment</fullName>
            </value>
            <value>
                <fullName>Automate manual tasks at real-time speed and scale.</fullName>
            </value>
            <value>
                <fullName>Complete inventory of managed and unmanaged endpoints</fullName>
            </value>
            <value>
                <fullName>Comply with relevant regulatory requirements related to incident response</fullName>
            </value>
            <value>
                <fullName>Create custom solutions leveraging platform extensibility.</fullName>
            </value>
            <value>
                <fullName>CVEs are remediated in minutes instead of days or weeks</fullName>
            </value>
            <value>
                <fullName>Detailed inventory of certificates with expire and cryptographic data</fullName>
            </value>
            <value>
                <fullName>Discover and reduce lateral movement paths</fullName>
            </value>
            <value>
                <fullName>Enrich external systems with accurate highly extensible real-time data.</fullName>
            </value>
            <value>
                <fullName>Establish and Enforce a standardized patching policy</fullName>
            </value>
            <value>
                <fullName>Establish an enterprise-wide, automated scheduled 3rd party software update methodology</fullName>
            </value>
            <value>
                <fullName>Exploits and vulnerabilities are managed in accordance with regulatory compliance frameworks</fullName>
            </value>
            <value>
                <fullName>Improve collaboration across teams with a integrated IT and Sec Ops platform.</fullName>
            </value>
            <value>
                <fullName>Improve delivery on IT&apos;s SLAs/SLOs to the business</fullName>
            </value>
            <value>
                <fullName>Improve efficiency by migrating to Tanium Cloud.</fullName>
            </value>
            <value>
                <fullName>Improve remote employees productivity while using endpoints and applications</fullName>
            </value>
            <value>
                <fullName>Increase employee satisfaction and retention by self-resolving technical issues</fullName>
            </value>
            <value>
                <fullName>Increase visibility into performance issues and resources usage</fullName>
            </value>
            <value>
                <fullName>Instantaneous alerts and/or detailed reporting of privileged access anomalies</fullName>
            </value>
            <value>
                <fullName>IT and Sec Ops tools consolidation.</fullName>
            </value>
            <value>
                <fullName>Keep endpoints up to date with a highly efficient and scalable patching solution capable of attaining high levels of patching efficacy.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>