objects/Business_Objective__c/fields/Expected_Customer_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Expected_Customer_Outcome__c</fullName>
    <description>SS-11088: Deprecated.</description>
    <inlineHelpText>Describe the specific results your customer would like to achieve with Tanium eg: Reduce patch time to two weeks and improve patch efficacy to 98%.</inlineHelpText>
    <label>DEPRECATED - Metrics/Customer Outcome</label>
    <type>TextArea</type>
</CustomField>