objects/Business_Objective__c/fields/Expected_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Expected_Timeframe__c</fullName>
    <description>SS-11088: Deprecated.</description>
    <inlineHelpText>Select the date the customer expects to see the outcome.  If the customer does not have a specific date, we encourage selecting a date based on best practices and delighting the customer.</inlineHelpText>
    <label>DEPRECATED - Expected Timeframe</label>
    <required>true</required>
    <type>Date</type>
</CustomField>