objects/Business_Objective__c/fields/Metrics_Customer_Outcome_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Metrics_Customer_Outcome_Baseline__c</fullName>
    <description>SS-11088: Deprecated.</description>
    <inlineHelpText>Document where your customer is starting prior to implementing Tanium. This should reflect the Identified Pain from MEDDPICC when possible. If not known, baseline ASAP after deployment</inlineHelpText>
    <label>DEPRECATED - Metrics/Customer Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>