objects/Business_Objective__c/fields/MoneySaved__c.field-meta.xml
<CustomField>
    <fullName>MoneySaved__c</fullName>
    <description>SS-11088: Deprecated.</description>
    <inlineHelpText>If known, enter the amount of money the customer saved by achieving this business objective.</inlineHelpText>
    <label>DEPRECATED - $ Saved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>