objects/Business_Objective__c/fields/Next_Upcoming_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Upcoming_Renewal_Date__c</fullName>
    <description>SS-11088: Deprecated.
Next Upcoming Renewal Date on the associated Account</description>
    <formula>Account__r.Next_Upcoming_Renewal_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Next Upcoming Renewal Date on the associated Account</inlineHelpText>
    <label>DEPRECATED - Next Upcoming Renewal Date</label>
    <type>Date</type>
</CustomField>