objects/Business_Objective__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SS-11088: Deprecated.</description>
    <label>DEPRECATED - Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Business Objectives</relationshipLabel>
    <relationshipName>Business_Goals</relationshipName>
    <type>Lookup</type>
</CustomField>