objects/Business_Objective__c/fields/Secondary_Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Stakeholder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SS-11088: Deprecated
Secondary customer contact who identified this Business Objective</description>
    <inlineHelpText>Select your secondary customer contact who identified this Business Objective</inlineHelpText>
    <label>DEPRECATED - Secondary Stakeholder</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <errorMessage>Secondary Stakeholder must be active and its Account must be the Account on this Business Objective</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Business Objectives (Secondary Stakeholder)</relationshipLabel>
    <relationshipName>Business_Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>