objects/Business_Objective__c/fields/Solution_Area__c.field-meta.xml
<CustomField>
    <fullName>Solution_Area__c</fullName>
    <description>SS-11088: Deprecated</description>
    <label>DEPRECATED - Solution Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core X1</fullName>
            </value>
            <value>
                <fullName>Core X2</fullName>
            </value>
            <value>
                <fullName>Core X3</fullName>
            </value>
            <value>
                <fullName>DEX</fullName>
            </value>
            <value>
                <fullName>Endpoint Management</fullName>
            </value>
            <value>
                <fullName>Incident Response</fullName>
            </value>
            <value>
                <fullName>Risk and Compliance</fullName>
            </value>
            <value>
                <fullName>Asset Discovery and Inventory</fullName>
                <isActive>false</isActive>
                <label>Asset Discovery and Inventory</label>
            </value>
            <value>
                <fullName>Client Management</fullName>
                <isActive>false</isActive>
                <label>Client Management</label>
            </value>
            <value>
                <fullName>Core Platform</fullName>
                <isActive>false</isActive>
                <label>Core Platform</label>
            </value>
            <value>
                <fullName>Sensitive Data Monitoring</fullName>
                <isActive>false</isActive>
                <label>Sensitive Data Monitoring</label>
            </value>
            <value>
                <fullName>Solution Area</fullName>
                <isActive>false</isActive>
                <label>Solution Area</label>
            </value>
            <value>
                <fullName>Threat Hunting</fullName>
                <isActive>false</isActive>
                <label>Threat Hunting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>