objects/Business_Objective__c/fields/Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>SS-11088: Deprecated</description>
    <inlineHelpText>Please select the primary customer contact who identified this business objective.</inlineHelpText>
    <label>DEPRECATED - Stakeholder</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <errorMessage>Stakeholder must be Active and its Account must be the Account on this Business Objective</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Business Objectives (Stakeholder)</relationshipLabel>
    <relationshipName>Use_Cases</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>