objects/Business_Objective__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>SS-11088: Deprecated</description>
    <label>DEPRECATED - Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Customer Outcome Achieved</fullName>
            </value>
            <value>
                <fullName>No Longer Relevant</fullName>
            </value>
            <value>
                <fullName>Expected Outcome Achieved</fullName>
                <isActive>false</isActive>
                <label>Expected Outcome Achieved</label>
            </value>
            <value>
                <fullName>Status</fullName>
                <isActive>false</isActive>
                <label>Status</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>