objects/Business_Objective__c/fields/Value_Component__c.field-meta.xml
<CustomField>
    <fullName>Value_Component__c</fullName>
    <description>SS-11088: Deprecated</description>
    <inlineHelpText>Select the best option to capture the Value Realized.  More information on Tanium Value Components can be found here: https://tanium.sharepoint.com/sites/Team-Team-GlobalsVerticals/SitePages/VE-ValueComponents.aspx</inlineHelpText>
    <label>DEPRECATED - Value Component</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breach Prevention/Mitigation</fullName>
                <label>Breach/Risk Prevention/Mitigation</label>
            </value>
            <value>
                <fullName>Found un/undermanaged assets</fullName>
            </value>
            <value>
                <fullName>Hardware reclamation</fullName>
            </value>
            <value>
                <fullName>Outage Prevention/Mitigation</fullName>
            </value>
            <value>
                <fullName>People/Process efficiencies</fullName>
            </value>
            <value>
                <fullName>Software license compliance audit</fullName>
            </value>
            <value>
                <fullName>Software reclamation</fullName>
            </value>
            <value>
                <fullName>Tool Consolidation/Displacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>