objects/Business_Objective__c/fields/Value_Realized__c.field-meta.xml
<CustomField>
    <fullName>Value_Realized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SS-11088: Deprecated</description>
    <inlineHelpText>Check this box if tangible value was realized as part of the objective.</inlineHelpText>
    <label>DEPRECATED - Value Realized</label>
    <type>Checkbox</type>
</CustomField>