objects/Business_Objective__c/recordTypes/Customer_Business_Objective.recordType-meta.xml
<RecordType>
    <fullName>Customer_Business_Objective</fullName>
    <active>true</active>
    <label>Customer Business Objective</label>
</RecordType>