objects/Business_Objective__c/validationRules/Business_Objective_Details_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Business_Objective_Details_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Business_Objective__c ,&quot;Other (Details Below)&quot;)
&amp;&amp;
ISBLANK( Customer_Business_Objective__c )</errorConditionFormula>
    <errorDisplayField>Customer_Business_Objective__c</errorDisplayField>
    <errorMessage>Please provide additional details on the Business Objective.</errorMessage>
</ValidationRule>