objects/Business_Objective__c/validationRules/Customer_Outcome_Details_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Outcome_Details_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(  Customer_Outcome__c  ,&quot;Other (Details Below)&quot;)
&amp;&amp;
ISBLANK(  Expected_Customer_Outcome__c )</errorConditionFormula>
    <errorDisplayField>Expected_Customer_Outcome__c</errorDisplayField>
    <errorMessage>Please provide additional details on the Customer Outcome.</errorMessage>
</ValidationRule>