objects/Business_Objective__c/validationRules/Require_Modules.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Modules</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL ( Status__c, &quot;Expected Outcome Achieved&quot;), AND (ISBLANK (  Modules_Used_To_Satify_Business_Objectiv__c)))</errorConditionFormula>
    <errorDisplayField>Modules_Used_To_Satify_Business_Objectiv__c</errorDisplayField>
    <errorMessage>If Status equals Expected Outcome Achieved, please complete the Solution Area and Modules Used to Satisfy Business Objective fields.</errorMessage>
</ValidationRule>