objects/Business_Objective__c/validationRules/Require_Solution_Area.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Solution_Area</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL ( Status__c, &quot;Expected Outcome Achieved&quot;), AND (ISPICKVAL ( Solution_Area__c , &quot;&quot;)))</errorConditionFormula>
    <errorDisplayField>Solution_Area__c</errorDisplayField>
    <errorMessage>If Status equals Expected Outcome Achieved, please complete the Solution Area and Modules Used to Satisfy Business Objective fields.</errorMessage>
</ValidationRule>