objects/Business_Objective__c/validationRules/Require_Value_Component.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Value_Component</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Value_Realized__c = True, ISPICKVAL( Value_Component__c , &quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Value_Component__c</errorDisplayField>
    <errorMessage>Value component(s) must be selected if Value Realized is checked.</errorMessage>
</ValidationRule>